# zipper

./: .gitignore  README.md  README.txt  flake.nix  notes.md  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: l7dfhlyv0j4llhxvw552xi9n90x844ji-source
src/: classifier.py  generator.py  main.py  player.py
src/modules/: __init__.py  helpers.py  queens.py  tango.py  zip.py
src/solver/: __init__.py  solver.py
