[project]
name = "zipper"
version = "0.1.0"
description = "Zipper: IQ at your fingertips"
authors = [ "Sheepheerd"]
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
]
